# reliable-credit-scoring-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  Notes.md  Pipfile  README.md  pyproject.toml
.github/workflows/: README.md  cd-deploy.yml  ci-tests.yml  ct.yml  fly.yml
automation/: Dockerfile  Makefile  Notes.md  Pipfile  README.md  app_data.json  config.py  event.json  kinesis-data.json  lambda_function.py  model.pkl  model.py
automation/infrastructure/: .gitignore  Notes.md  main.tf  variables.tf
automation/integraton-test/: docker-compose.yaml  run.sh  test_docker.py  test_kinesis.py
automation/scripts/: deploy_manual.sh  test_cloud_e2e.sh
credit-risk-model/: Makefile  Notes.md  Readme.md  blog.md  manage.py  params.yaml
data/: README.md  ingest.py
deployment/: README.md  docker-compose.yml  makefile  test.sh  test_read_model.py
feature-pipeline/: .env.default  README.md  pyproject.toml
feature-pipeline/feature_pipeline/: Notes.md  __init__.py  clean_feature_store.py  feature_view.py  pipeline.py  settings.py  train_test_oot_view.py  utils.py
feature-pipeline/feature_pipeline/etl/: __init__.py  cleaning.py  extract.py  load.py  metadata.json  validation.py
feature-pipeline/output/: feature_pipeline_metadata.json
feature-pipeline/test/: test_download_data.py
monitoring/: Notes.md  Pipfile  README.md  db.py  debugging_risk-scoring-data.ipynb  docker-compose.yml  dummy_metrics_calculation_risk.py  evidently_metrics.py  evidently_metrics_calculation_risk.py  monitoring.py  optnining-metrics-calculated.py  risk-scoring-data.ipynb  storage.py
(+50 files in other folders)
