[tool.poetry]
name = "mlops-feature-pipeline"
version = "0.1.0"
description = ""
authors = ["J. Nsofini <jnsofini@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = "~3.10"
hopsworks = "^3.0.5"
fire = "^0.5.0"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"
python-dotenv = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
